--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AJAX</title>
   </head>
-  <body></body>
+  <body>
+    <h1>AJAX</h1>
+    <h2>XMLHttpRequest</h2>
+    <ol id="xhr"></ol>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <script src="js/ajax.js"></script>
+  </body>
 </html>
