--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>AJAX</h1>
     <h2>XMLHttpRequest</h2>
     <ol id="xhr"></ol>
+    <h2>API Fetch</h2>
+    <h2 id="loader">Cargando...</h2>
+    <ol id="fetch"></ol>
     <br />
     <br />
     <br />
