fin de la clase3

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h2>API Fetch</h2>
     <h2 id="loader">Cargando...</h2>
     <ol id="fetch"></ol>
+    <h2>API Fetch + Async-Await</h2>
+    <h2 id="loader2">Cargando...</h2>
+    <ol id="fetch-async"></ol>
     <br />
     <br />
     <br />
