--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     <h2>API Fetch + Async-Await</h2>
     <h2 id="loader2">Cargando...</h2>
     <ol id="fetch-async"></ol>
+    <h2>Axios</h2>
+    <h2 id="loader3">Cargando...</h2>
+    <ol id="axios"></ol>
+    <h2>Axios Async Await</h2>
+    <h2 id="loader4">Cargando...</h2>
+    <ol id="axios-async-await"></ol>
     <br />
     <br />
     <br />
     <br />
     <br />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/ajax.js"></script>
   </body>
 </html>
