--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <br />
     <br />
     <br />
+    <a href="crud-ajax.html">CRUD</a>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/ajax.js"></script>
   </body>
