--- a/crud-ajax.html
+++ b/crud-ajax.html
@@ -48,6 +48,6 @@
         </td>
       </tr>
     </template>
-    <script src="js/crud-ajax.js"></script>
+    <script src="js/crudA.js"></script>
   </body>
 </html>
