--- a/crud-ajax.html
+++ b/crud-ajax.html
@@ -49,5 +49,9 @@
       </tr>
     </template>
     <script src="js/index.js" type="module"></script>
+    <img
+      src="https://www.google.com/search?q=Saga+geminis&prmd=ivn#imgrc=PJvCsWIof8bixM"
+      alt=""
+    />
   </body>
 </html>
