--- a/crud-ajax.html
+++ b/crud-ajax.html
@@ -8,7 +8,7 @@
   <body>
     <h1>CRUD API REST</h1>
     <select name="opiciones" form="form" id="select">
-      <option value="Ajax">AJAX</option>
+      <option value="Ajax">Ajax</option>
       <option value="Fetch">Fetch</option>
       <option value="Axios">Axios</option>
     </select>
