--- a/crud-ajax.html
+++ b/crud-ajax.html
@@ -53,6 +53,7 @@
         </td>
       </tr>
     </template>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/index.js" type="module"></script>
     <img
       src="https://www.google.com/search?q=Saga+geminis&prmd=ivn#imgrc=PJvCsWIof8bixM"
